// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableHeader> default snapshot 1`] = `
<tr
  class="TableQL-tr"
>
  <th
    class="TableQL-th"
    scope="col"
  >
    Author
  </th>
  <th
    class="TableQL-th"
    scope="col"
  >
    Title
  </th>
  <th
    class="TableQL-th"
    scope="col"
  >
    Id
  </th>
  <th
    class="TableQL-th"
    scope="col"
  >
    Edition
  </th>
  <th
    class="TableQL-th"
    scope="col"
  >
    Price
  </th>
  <th
    class="TableQL-th"
    scope="col"
  >
    Year Written
  </th>
</tr>
`;

exports[`<TableHeader> when columns config passed 1`] = `
<tr
  class="TableQL-tr"
>
  <th
    class="TableQL-th"
    scope="col"
  >
    Author
  </th>
  <th
    class="TableQL-th"
    scope="col"
  >
    Title
  </th>
</tr>
`;
